2004-05-17  Jeffrey Stedfast  <fejj@novell.com>

	* gui/component/addressbook-view.c: Change E_PIXMAP size args over
	to E_ICON_SIZE_* values.

	* gui/widgets/e-minicard.c (e_minicard_init): Use an E_ICON_SIZE
	enum value for the icon_size argument to get_icon.

	* gui/widgets/eab-gui-util.c (eab_create_image_chooser_widget):
	Use E_ICON_SIZE_DIALOG as the icon_size argument to
	get_icon_filename.

	* gui/widgets/eab-contact-display.c (on_url_requested): Use an
	E_ICON_SIZE enum as the icon_size argument to get_icon_filename.

	* gui/contact-editor/e-contact-editor-im.c
	(setup_service_optmenu): Use E_ICON_SIZE_MENU here.

	* gui/component/select-names/e-select-names-popup.c
	(populate_popup_contact): Use E_ICON_SIZE_MENU here instead of 16.

	* gui/component/addressbook-view.c (set_status_message): Use the
	E_ICON_SIZE corresponding to 16x16 pixels.

2004-05-12  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/contact-editor.glade: Add PO box entries.

	* gui/contact-editor/e-contact-editor.c (init_address_record): Hook
	up PO box entry.
	(fill_in_address_record): Ditto.
	(extract_address_record): Ditto.

2004-04-18  S N Tejasvi  <tejasvi_sn@gawab.com>

	Fixes bug #55208.

	* gui/contact-editor/e-contact-editor.c (save_contact):
	Do e_contact_editor_is_valid check to check the birth date and
	anniversary date format when user wants to save and warn him.

2004-05-11  Not Zed  <NotZed@Ximian.com>

	* gui/component/addressbook-component.c (impl_upgradeFromVersion):
	set exception properly on failure.

	* gui/component/addressbook-migrate.c (addressbook_migrate): take
	a GError error return.  Doesn't do anything with it ... but ...

2004-05-11  Dan Winship  <danw@ximian.com>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: Remove
	the addressbook control

	* gui/component/component-factory.c (factory): Remove support for
	the addressbook control

	* gui/component/addressbook-view.c: Remove all the property-bag
	stuff.
