@@ -1,5 +1,8 @@
 2004-05-17  Jeffrey Stedfast  <fejj@novell.com>
 
+	* gui/contact-list-editor/e-contact-list-editor.c: Change E_PIXMAP
+	size args over to E_ICON_SIZE_* values.
+
 	* gui/component/addressbook-view.c: Change E_PIXMAP size args over
 	to E_ICON_SIZE_* values.
 
